--- a/xss.yaml
+++ b/xss.yaml
@@ -10,11 +10,13 @@ info:
         <form action="https://example.com/login" method="post" class="form-signin">
             <div class="form-group">
                 <label for="username">Username</label>
-                <input type="text" name="username" size="20">
+                <textarea rows="2" cols="15"></textarea>
+
             </div>
             <div class="form-group">
                 <label for="password">Password</label>
-                <input type="password" name="password" size="20">
+                <textarea rows="2" cols="15"></textarea>
+
             </div>
             <div class="form-group">
                 <button type="submit" class="btn btn-default">Login</button>
